# fastapi-production-flagship

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: c1.yaml  ci.yaml
alembic/: env.py
alembic/versions/: 60b65925cdc8_create_users_table.py
app/: main.py  metrics.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  health.py  users.py
app/auth/: routes.py  schemas.py  security.py  service.py
app/core/: cache.py  config.py  database.py  deps.py  security.py
app/middleware/: correlation_id.py  logging.py  rate_limit.py
app/models/: base.py  user.py
app/schemas/: token.py  user.py
app/services/: auth_service.py  user_service.py
app/users/: models.py  routes.py  schemas.py  service.py
app/utils/: exceptions.py
docker/: Dockerfile
scripts/: benchmark.sh  format.sh  lint.sh  test.sh
tests/: conftest.py  test_auth.py  test_rate_limit.py  test_user.py  test_utils.py
