# pyproject.toml
[tool.poetry]
name = "fastapi-production-flagship"
version = "0.1.0"
description = "Production-ready FastAPI template"
authors = ["Saikat Bala <saikatbala3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.123.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
sqlalchemy = "^2.0.44"
asyncpg = "^0.31.0"
alembic = "^1.17.2"
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.12.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
redis = "^7.1.0"
python-multipart = "^0.0.20"

# [tool.poetry.group.dev.dependencies]
# pytest = "^7.4.0"
# pytest-asyncio = "^0.21.0"
# pytest-cov = "^4.1.0"
# httpx = "^0.25.0"
# black = "^23.10.0"
# isort = "^5.12.0"
# mypy = "^1.6.0"
# flake8 = "^6.1.0"
# pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"