# pyproject.toml
[tool.poetry]
name = "fastapi-production-flagship"
version = "0.1.0"
description = "Production-ready FastAPI template"
authors = ["Saikat Bala <saikatbala3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.123.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
sqlalchemy = "^2.0.44"
asyncpg = "^0.31.0"
alembic = "^1.17.2"
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.12.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
redis = "^7.1.0"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^4.1.0"
httpx = "^0.28.1"
black = "^23.10.0"
isort = "^5.12.0"
mypy = "^1.6.0"
flake8 = "^6.1.0"
pre-commit = "^4.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=app --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
disable_error_code = ["import-untyped", "attr-defined"]
